# cpp-template

./: .gitignore  CMakeLists.txt  build.sh
src/: main.cpp  pch.h
